Checking in 1.3.1 bugfixes
git-svn-id: http://plugins.svn.wordpress.org/wpbook/trunk@105772 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -104,7 +104,8 @@
   
  <h4>General Options</h4> 
    <p>The "show post date with title" option will show, as you might expect, 
-   the date posted preceding the title of each blog post. </p>
+   the date posted preceding the title of each blog post.</p>
+  <p> If you have not set the date format in the advanced options you must do this before activating this option. Once the date has been set the "show advanced options" can be disabled.  </p>
 
    <p>The "Give WPBook credit" option adds a line at the bottom of your Facebook
    application pages which says "This Facebook application powered by the 
