--- a/install_instructions.html
+++ b/install_instructions.html
@@ -71,6 +71,9 @@
    (Facebook does not allow access to the user's email address, so you can 
    really only ask users to provide one, not prefill it automatically). </p>
 
+   <p> The Enable Gravatar option will allow you to use Globally recognized avatars or Gravatars. You will be able to set a rating and a default gravatar. 
+   For more information on gravatars visit <a href="http://gravatar.com">Gravatar.com</a></p>
+   
 <h4>Socialize Options</h4>
 
    <p>Enabling the "Show Invite Friends Link" will show a link inside 
@@ -111,6 +114,10 @@
    application pages which says "This Facebook application powered by the 
    WPBook plugin for Wordpress" - I'd love it if you would leave this enabled
    but it is not required.  </p>
+      
+	  <p>The "show pages" option adds the ability to pull your Wordpress pages into Facebook. This feature is still in experimental mode and won't work 
+with all plugins but works well for static content pages.	  </p>
+   
 
 <h3>Show Advanced Options</h3>
 
