--- a/instructions/index.html
+++ b/instructions/index.html
@@ -71,6 +71,9 @@
    (Facebook does not allow access to the user's email address, so you can 
    really only ask users to provide one, not prefill it automatically). </p>
 
+   <p> The Enable Gravatar option will allow you to use Globally recognized avatars or Gravatars. You will be able to set a rating and a default gravatar. 
+   For more information on gravatars visit <a href="http://gravatar.com">Gravatar.com</a></p>
+   
 <h4>Socialize Options</h4>
 
    <p>Enabling the "Show Invite Friends Link" will show a link inside 
@@ -104,13 +107,17 @@
   
  <h4>General Options</h4> 
    <p>The "show post date with title" option will show, as you might expect, 
-   the date posted preceding the title of each blog post.</p>
-  <p> If you have not set the date format in the advanced options you must do this before activating this option. Once the date has been set the "show advanced options" can be disabled.  </p>
+   the date posted preceding the title of each blog post. </p>
+     <p> If you have not set the date format in the advanced options you must do this before activating this option. Once the date has been set the "show advanced options" can be disabled.  </p>
 
    <p>The "Give WPBook credit" option adds a line at the bottom of your Facebook
    application pages which says "This Facebook application powered by the 
    WPBook plugin for Wordpress" - I'd love it if you would leave this enabled
    but it is not required.  </p>
+      
+	  <p>The "show pages" option adds the ability to pull your Wordpress pages into Facebook. This feature is still in experimental mode and won't work 
+with all plugins but works well for static content pages.	  </p>
+   
 
 <h3>Show Advanced Options</h3>
 
